--- a/.harness/RemoteAmit_v1.yaml
+++ b/.harness/RemoteAmit_v1.yaml
@@ -11,7 +11,7 @@ template:
       includePipelineExecutionHistory: true
       approvers:
         userGroups: <+input>
-        minimumCount: <+input>
         disallowPipelineExecutor: false
+        minimumCount: 2
       approverInputs: []
       approvalMessage: created now
