Update template RemoteAmit

--- a/.harness/RemoteAmit_v1.yaml
+++ b/.harness/RemoteAmit_v1.yaml
@@ -12,6 +12,6 @@ template:
       approvers:
         userGroups: <+input>
         disallowPipelineExecutor: false
-        minimumCount: 2
+        minimumCount: <+input>
       approverInputs: []
       approvalMessage: created now
