--- a/.harness/prod123_v1.yaml
+++ b/.harness/prod123_v1.yaml
@@ -8,7 +8,7 @@ template:
     type: HarnessApproval
     timeout: 1d
     spec:
-      approvalMessage: Please review the following information and approve the pipeline progression update
+      approvalMessage: Please review the following information and approve the pipeline progression update 432
       includePipelineExecutionHistory: true
       approvers:
         userGroups: <+input>
