Update template STage456

--- a/.harness/STage456_v2.yaml
+++ b/.harness/STage456_v2.yaml
@@ -10,7 +10,7 @@ template:
       execution:
         steps:
           - step:
-              name: asdfe
+              name: as233
               identifier: asdfe
               template:
                 templateRef: account.Step321
