Update inputset inp3456

--- a/.harness/inputSets/Before_git_sync_enable/inp3456.yaml
+++ b/.harness/inputSets/Before_git_sync_enable/inp3456.yaml
@@ -1,6 +1,7 @@
 inputSet:
   identifier: "inp3456"
   name: "inp3456"
+  tags: {}
   orgIdentifier: "default"
   projectIdentifier: "ProdMigration"
   pipeline:
