--- a/.harness/Step_without_use_v1.yaml
+++ b/.harness/Step_without_use_v1.yaml
@@ -15,6 +15,6 @@ template:
       source:
         type: Inline
         spec:
-          script: echo 'amit'
+          script: echo 'amit update'
       environmentVariables: []
       outputVariables: []
