--- a/.harness/inoutset2.yaml
+++ b/.harness/inoutset2.yaml
@@ -1,6 +1,7 @@
 inputSet:
   identifier: "inoutset2"
-  name: "inout-set-2"
+  name: "Input-set-2"
+  tags: {}
   orgIdentifier: "default"
   projectIdentifier: "Kapil"
   pipeline:
