--- a/.harness/pipe23Nov1.yaml
+++ b/.harness/pipe23Nov1.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: A345
         identifier: A345
-        description: ""
+        description: "update"
         type: Custom
         spec:
           execution:
