--- a/23Nov/.harness/pipelines/remoteTemplatePipe.yaml
+++ b/23Nov/.harness/pipelines/remoteTemplatePipe.yaml
@@ -14,7 +14,7 @@ pipeline:
     - stage:
         name: abc
         identifier: abc
-        description: ""
+        description: "hello"
         type: Custom
         spec:
           execution:
