--- a/.harness/pipe23Nov.yaml
+++ b/.harness/pipe23Nov.yaml
@@ -29,7 +29,7 @@ pipeline:
     - stage:
         name: A1
         identifier: A1
-        description: "updated"
+        description: updated
         type: Custom
         spec:
           execution:
@@ -37,6 +37,28 @@ pipeline:
               - step:
                   name: w3
                   identifier: w3
+                  template:
+                    templateRef: customTemplate
+                    versionLabel: v1
+                    templateInputs:
+                      type: ShellScript
+                      spec:
+                        source:
+                          type: Inline
+                          spec:
+                            script: <+input>
+        tags: {}
+    - stage:
+        name: A345
+        identifier: A345
+        description: ""
+        type: Custom
+        spec:
+          execution:
+            steps:
+              - step:
+                  name: ggf
+                  identifier: ggf
                   template:
                     templateRef: customTemplate
                     versionLabel: v1
