Update pipeline issueCheck12Dec

--- a/.harness/issueCheck12Dec.yaml
+++ b/.harness/issueCheck12Dec.yaml
@@ -29,3 +29,27 @@ pipeline:
                       userGroups: <+input>
                     approverInputs: []
         tags: {}
+    - stage:
+        name: A34
+        identifier: A34
+        description: ""
+        type: Approval
+        spec:
+          execution:
+            steps:
+              - step:
+                  name: Asd45
+                  identifier: Asd45
+                  type: HarnessApproval
+                  timeout: 1d
+                  spec:
+                    approvalMessage: |-
+                      Please review the following information
+                      and approve the pipeline progression
+                    includePipelineExecutionHistory: true
+                    approvers:
+                      minimumCount: 1
+                      disallowPipelineExecutor: false
+                      userGroups: <+input>
+                    approverInputs: []
+        tags: {}
