--- a/.harness/issueCheck12Dec.yaml
+++ b/.harness/issueCheck12Dec.yaml
@@ -53,3 +53,20 @@ pipeline:
                       userGroups: <+input>
                     approverInputs: []
         tags: {}
+    - stage:
+        name: yt
+        identifier: yt
+        template:
+          templateRef: DeployTypeT1
+          versionLabel: "1"
+          templateInputs:
+            type: Approval
+            spec:
+              execution:
+                steps:
+                  - step:
+                      identifier: sde
+                      type: HarnessApproval
+                      spec:
+                        approvers:
+                          userGroups: <+input>
