Update pipeline pipeline 1 feb 2

--- a/.harness/pipeline_1_feb_2.yaml
+++ b/.harness/pipeline_1_feb_2.yaml
@@ -41,7 +41,7 @@ pipeline:
           environment:
             environmentRef: <+input>
             deployToAll: false
-            environmentInputs: qa
+            environmentInputs: <+input>
             serviceOverrideInputs: <+input>
             infrastructureDefinitions: <+input>
           execution:
