--- a/.harness/pipeline_1_feb_2.yaml
+++ b/.harness/pipeline_1_feb_2.yaml
@@ -23,7 +23,7 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: echo 'check'
+                        script: <+input>
                     environmentVariables: []
                     outputVariables: []
                   timeout: <+input>
