--- a/.harness/Pipe2_feb2.yaml
+++ b/.harness/Pipe2_feb2.yaml
@@ -6,8 +6,8 @@ pipeline:
   tags: {}
   stages:
     - stage:
-        name: stage1
-        identifier: stage1
+        name: s1
+        identifier: s1
         template:
           templateRef: stageTemplateRepo
           versionLabel: "1"
@@ -19,8 +19,4 @@ pipeline:
                   - step:
                       identifier: ShellScript_1
                       type: ShellScript
-                      spec:
-                        source:
-                          type: Inline
-                          spec:
-                            script: <+input>
+                      timeout: <+input>
