--- a/.harness/stageBatch1_1.yaml
+++ b/.harness/stageBatch1_1.yaml
@@ -19,7 +19,7 @@ template:
                 source:
                   type: Inline
                   spec:
-                    script: echo 'hi update'
+                    script: <+input>
                 environmentVariables: []
                 outputVariables: []
               timeout: 10m
