--- a/.amit/pl_auto_pipeline_05N98.yaml
+++ b/.amit/pl_auto_pipeline_05N98.yaml
@@ -23,7 +23,7 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: echo test
+                        script: echo testt
                     environmentVariables: []
                     outputVariables: []
                   timeout: 1m
