Update template pipelineTemplate19Sept

--- a/.harness/pipelineTemplate19Sept_1.yaml
+++ b/.harness/pipelineTemplate19Sept_1.yaml
@@ -86,3 +86,9 @@ template:
               description: ""
               required: false
               value: <+input>.selectOneFrom(v8,v9)
+          failureStrategies:
+            - onFailure:
+                errors:
+                  - AllErrors
+                action:
+                  type: MarkAsSuccess
