Update template step-21Apr2025-1

--- a/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/step21Apr20251/v1.yaml
+++ b/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/step21Apr20251/v1.yaml
@@ -16,6 +16,6 @@ template:
       source:
         type: Inline
         spec:
-          script: echo 'hi'
+          script: echo 'hi update'
       environmentVariables: []
       outputVariables: []
