Update template stage-template-21Apr2025

--- a/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/stagetemplate21Apr2025/v1.yaml
+++ b/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/stagetemplate21Apr2025/v1.yaml
@@ -17,3 +17,9 @@ template:
               template:
                 templateRef: step21Apr20251
                 versionLabel: v1
+          - step:
+              type: Wait
+              name: Wait_1
+              identifier: Wait_1
+              spec:
+                duration: 10m
