Update template pipelineTemplate21APr-2025

--- a/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/pipelineTemplate/v1.yaml
+++ b/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/pipelineTemplate/v1.yaml
@@ -15,3 +15,4 @@ template:
           template:
             templateRef: stagetemplate21Apr2025
             versionLabel: v1
+            gitBranch: 21-2025Apr
