Update template pipelineTemplate21APr-2025

--- a/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/pipelineTemplate/v1.yaml
+++ b/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/AmitTest/templates/pipelineTemplate/v1.yaml
@@ -16,3 +16,7 @@ template:
             templateRef: stagetemplate21Apr2025
             versionLabel: v1
             gitBranch: 21-2025Apr
+      - insert:
+          name: s2
+          identifier: s2
+          stages: <+input>
