--- a/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/NGPipeAutoPipelineSvcwA6zDQbMjI/templates/pipelineTempalte30Apr/v1.yaml
+++ b/.harness/orgs/Pipelines_NonK8s_Org_NG/projects/NGPipeAutoPipelineSvcwA6zDQbMjI/templates/pipelineTempalte30Apr/v1.yaml
@@ -31,3 +31,9 @@ template:
                       outputVariables: []
                     timeout: 10m
           tags: {}
+          variables:
+            - name: var2
+              type: String
+              description: ""
+              required: false
+              value: <+input>
